unpackaged/main/default/objects/Activity/fields/Queue_Override__c.field-meta.xml
<CustomField>
    <fullName>Queue_Override__c</fullName>
    <description>Technical field is used to handle specific use cases when sharing tasks between SF1 and SF2 instances.</description>
    <label>Queue Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>