unpackaged/main/default/objects/Activity/fields/SF_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>SF_Source_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SF Source Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>