unpackaged/main/default/objects/Activity/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>21196 - Used to determine which Team Queue to assign tasks to after they have been shared via SF2SF connection</description>
    <inlineHelpText>Select a team</inlineHelpText>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Credentialling</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>LCR</fullName>
            </value>
            <value>
                <fullName>PCC</fullName>
            </value>
            <value>
                <fullName>RCM</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>